fix css and content for jobs and menu

--- a/Week4/Case02/menu.html
+++ b/Week4/Case02/menu.html
@@ -31,16 +31,15 @@
                   Regular house blend, decaffeinated coffee,
                   or flavor of the day.
                   <br>
-                  Endless Cup $2.00
+                  <b>Endless Cup $2.00</b>
                 </td>
             </tr>
             <tr class="menu-item">
               <td class="drink">Cafe au Lait</td>
               <td class="description">
-                House blended coffee infused into a smooth
-                steamed milk.
+                House blended coffee infused into a smooth steamed milk.
                 <br>
-                Single $2.00 Double $3.00
+                <b>Single $2.00 Double $3.00</b>
               </td>
             </tr>
             <tr class="menu-item">
@@ -50,7 +49,7 @@
                 milk and served in a
                 chilled glass.
                 <br>
-                Single $4.75 Double $5.75
+                <b>Single $4.75 Double $5.75</b>
               </td>
             </tr>
           </table>
