--- a/Week4/Case02/music.html
+++ b/Week4/Case02/music.html
@@ -24,69 +24,66 @@
         </div>
         <div class="content" id="content-index">
           <h1>Music at JavaJam</h1>
-  
-          <p>The first Friday night each month at JavaJam is a special
-            night. Join us from 8pm to 11pm for some music you won't
-            want to miss.</p>
-  
+
+          <p>
+            The first Friday night each month at JavaJam is a special night. Join us from 8pm to 11pm for some music you
+            won't want to miss.
+          </p>
+
           <table class="music">
             <tr class="month">
-              <td colspan="2">January</td>
+              <td colspan="2">JANUARY</td>
             </tr>
-  
+
             <tr class="music-content">
               <td class="artist" rowspan="2">
-                <img class="artist-img" src="assets/img/artist1.png"
-                  alt="Melanie Morris">
+                <img class="artist-img" src="assets/stevie-nicks.png" alt="Melanie Morris" />
               </td>
-  
+
               <td class="music-description">
-                <p>Melanie Morris entertains with her melodic folk
-                  style.</p>
-                <p>CDs are now available.</p>
+                <p>
+                  Melanie Morris entertains with her melodic folk style.<br />
+                  <b>CDs are now available!</b>
+                </p>
               </td>
             </tr>
-  
+
             <tr class="music-player">
               <td class="player">
-                <audio controls
-                  src="assets/sound/sound1.m4a"></audio>
+                <audio controls src="assets/sound/sound1.m4a"></audio>
               </td>
             </tr>
-              <tr class="month">
-              <td colspan="2">Feburary</td>
+            <tr class="month">
+              <td colspan="2">FEBRUARY</td>
             </tr>
-  
+
             <tr class="music-content">
               <td class="artist" rowspan="2">
-                <img class="artist-img" src="assets/img/artist2.png"
-                  alt="Tahoe Greg">
+                <img class="artist-img" src="assets/john-mayer.jpg" alt="Tahoe Greg" />
               </td>
-  
+
               <td class="music-description">
-                <p>Tahoe Greg is back from his tour.<br>
-                New songs.<br>
-                New stories.<br>
-                CDs are now available.</p>
+                <p>
+                  Tahoe Greg is back from his tour.<br />
+                  New songs. New stories.<br />
+                  <b>CDs are now available!</b>
+                </p>
               </td>
             </tr>
-  
+
             <tr class="music-player">
               <td class="player">
-                <audio controls
-                  src="assets/sound/sound2.m4a"></audio>
+                <audio controls src="assets/sound/sound2.m4a"></audio>
               </td>
             </tr>
           </table>
         </div>
-  
-      </div>
       </div>
       <footer>
         <p>
-        <div class="copyright">
-          <i>Copyright &copy; 2014 JavaJam Coffee House</i>
-        </div>
+          <div class="copyright">
+            <i>Copyright &copy; 2014 JavaJam Coffee House</i>
+          </div>
           <div class="contact">
             <a href="mailto:mayank@pallai.com">mayank@pallai.com </a>
           </div>
