--- a/Week4/Case02/jobs.html
+++ b/Week4/Case02/jobs.html
@@ -33,7 +33,7 @@
                     <label for="name">*Name:</label>
                   </td>
                   <td class="input-field">
-                    <input type="text" name="name" id="name">
+                    <input type="text" name="name" id="name" placeholder="Enter your name here">
                   </td>
                 </tr>
                 <tr class="contact-item">
@@ -41,7 +41,7 @@
                     <label for="name">*E-mail:</label>
                   </td>
                   <td class="input-field">
-                    <input type="text" name="name" id="name">
+                    <input type="text" name="name" id="name" placeholder="Enter your Email-ID here">
                   </td>
                 </tr>
                 <tr class="contact-item">
@@ -49,7 +49,7 @@
                     <label for="name">Start Date:</label>
                   </td>
                   <td class="input-field">
-                    <input type="text" name="name" id="name">
+                    <input type="date" name="name" id="name">
                   </td>
                 </tr>
                 <tr class="contact-item">
@@ -57,11 +57,12 @@
                     <label for="name">*Experience:</label>
                   </td>
                   <td class="input-field">
-                    <input type="text" name="name" id="name">
+                    <textarea type="text" name="name" id="name">Enter your past experience here</textarea>
                   </td>
                 </tr>
               </table>
               <br>
+              <input type="reset" value="Clear"><br><br>
               <input type="submit" value="Apply Now">
             </form>  
       </div>
