--- a/Week4/Case02/music.html
+++ b/Week4/Case02/music.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CaseStudy02</title>
-    <link rel="stylesheet" href="assets/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -12,7 +12,7 @@
         <img alt="JavaJam Coffee House" id="banner" src="assets/banner.png" />
       </header>
       <div class="content-wrapper">
-        <div class="navbar">
+        <div class="navbar navbar-music">
           <nav>
             <ul>
               <li><a href="index.html" id="current">Home</a></li>
@@ -37,20 +37,19 @@
 
             <tr class="music-content">
               <td class="artist" rowspan="2">
-                <img class="artist-img" src="assets/stevie-nicks.png" alt="Melanie Morris" />
+                <!-- source: https://medium.com/@sophiagoth/fleetwood-macs-angel-1979-performance-why-this-song-should-inspire-songwriters-e995b367bbe6 -->
+                <img class="artist-img" src="assets/stevie-nicks.png" alt="Stevie Nicks" />
               </td>
-
               <td class="music-description">
                 <p>
-                  Melanie Morris entertains with her melodic folk style.<br />
+                  Stevie Nicks entertains with her melodic folk style.<br />
                   <b>CDs are now available!</b>
                 </p>
               </td>
             </tr>
-
             <tr class="music-player">
               <td class="player">
-                <audio controls src="assets/sound/sound1.m4a"></audio>
+                <audio controls src="assets/gypsy.mp3"></audio>
               </td>
             </tr>
             <tr class="month">
@@ -59,12 +58,13 @@
 
             <tr class="music-content">
               <td class="artist" rowspan="2">
-                <img class="artist-img" src="assets/john-mayer.jpg" alt="Tahoe Greg" />
+                <!-- source: https://english-voice-over.fandom.com/wiki/Billy_Joel -->
+                <img class="artist-img" src="assets/billy-joel.jpg" alt="Tahoe Greg" />
               </td>
 
               <td class="music-description">
                 <p>
-                  Tahoe Greg is back from his tour.<br />
+                  Billy Joel is back from his tour.<br />
                   New songs. New stories.<br />
                   <b>CDs are now available!</b>
                 </p>
@@ -73,7 +73,7 @@
 
             <tr class="music-player">
               <td class="player">
-                <audio controls src="assets/sound/sound2.m4a"></audio>
+                <audio controls src="assets/piano-man.mp3"></audio>
               </td>
             </tr>
           </table>
