--- a/Week4/Case02/index.html
+++ b/Week4/Case02/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CaseStudy02</title>
-    <link rel="stylesheet" href="assets/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -27,6 +27,7 @@
           <table>
             <tr>
               <td id="content-left">
+                <!--source: https://stocksnap.io/photo/restaurant-bar-THXU08ODDE -->
                 <img alt="coffee-house" id="coffee-house" src="assets/restaurant.jpg" />
               </td>
               <td id="content-right">
@@ -37,7 +38,7 @@
                   <li>Open Mic Night Every Friday</li>
                 </ul>
 
-                <p>
+                <p class="address">
                   542321 Route 42<br />
                   Ellison Bay, WI 54210<br />
                   888-555-8888<br />
