--- a/Week4/Case02/menu.html
+++ b/Week4/Case02/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CaseStudy02</title>
-    <link rel="stylesheet" href="assets/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -12,7 +12,7 @@
         <img alt="JavaJam Coffee House" id="banner" src="assets/banner.png" />
       </header>
       <div class="content-wrapper">
-        <div class="navbar">
+        <div class="navbar navbar-menu">
           <nav>
             <ul>
               <li><a href="index.html" id="current">Home</a></li>
