--- a/Week4/Case02/index.html
+++ b/Week4/Case02/index.html
@@ -15,7 +15,7 @@
         <div class="navbar">
           <nav>
             <ul>
-              <li><a href="index.html" id="current">Home</a></li>
+              <li><a href="index.html" id="current" class="active-home">Home</a></li>
               <li><a href="menu.html">Menu</a></li>
               <li><a href="music.html">Music</a></li>
               <li><a href="jobs.html">Jobs</a></li>
