--- a/Week4/Case02/music.html
+++ b/Week4/Case02/music.html
@@ -17,7 +17,7 @@
             <ul>
               <li><a href="index.html" id="current">Home</a></li>
               <li><a href="menu.html">Menu</a></li>
-              <li><a href="music.html">Music</a></li>
+              <li><a href="music.html" class="active-home">Music</a></li>
               <li><a href="jobs.html">Jobs</a></li>
             </ul>
           </nav>
