--- a/Week9/Case05/music.html
+++ b/Week9/Case05/music.html
@@ -16,7 +16,7 @@
           <nav>
             <ul>
               <li><a href="index.html" id="current">Home</a></li>
-              <li><a href="menu.html">Menu</a></li>
+              <li><a href="menu.php">Menu</a></li>
               <li><a href="music.html" class="active-home">Music</a></li>
               <li><a href="jobs.html">Jobs</a></li>
             </ul>
