--- a/Week9/Case05/index.html
+++ b/Week9/Case05/index.html
@@ -19,6 +19,8 @@
               <li><a href="menu.php">Menu</a></li>
               <li><a href="music.html">Music</a></li>
               <li><a href="jobs.html">Jobs</a></li>
+              <li><a href="update_pricing.php">Update Pricing</a></li>
+              <li><a href="sales_report.php">Sales Report</a></li>
             </ul>
           </nav>
         </div>
