update pricing page add

--- a/Week9/Case05/jobs.html
+++ b/Week9/Case05/jobs.html
@@ -66,8 +66,10 @@
                 </tr>
               </table>
               <br>
-              <input type="reset" value="Clear"><br><br>
-              <input type="submit" value="Apply Now">
+              <div class="jobs-buttons">
+                <input type="reset" value="Clear"><br><br>
+                <input type="submit" value="Apply Now">
+              </div>
             </form>  
       </div>
       </div>
